fixed a few things that were broken

--- a/sass/global/_buttons.scss
+++ b/sass/global/_buttons.scss
@@ -28,7 +28,7 @@
 	$buttons: (
 						 blue $base-blue $base-white,
 						 red $base-red $base-white,
-						 fb $fb-blue $base-white, 
+						 fb $secondary-blue $base-white, 
 						);
 
 	@each $button in $buttons{
