--- a/sass/global/_variables.scss
+++ b/sass/global/_variables.scss
@@ -13,7 +13,7 @@
   //BLUES
   $light-blue: #0A96CC;
   $base-blue: #548699;
-  $fb-blue: #3b5998;
+  $secondary-blue: #3b5998;
 
   //WHITE
   $base-white: #FFFFFF;
