--- a/sass/application/_signup.scss
+++ b/sass/application/_signup.scss
@@ -7,12 +7,15 @@ a {text-decoration: none;}
 
 .signup-page {
 
-  .right-nav {
-    .right-navlink {
-    margin-top: 1.5em;
+  ul {
+    .right-nav {
+      margin-top: 2em;
     }
-      
   }
+    
+  
+  
+
 
   .signup-main-image {
     background:url(../images/raisegoodcover.png) no-repeat top center;
