--- a/stylesheets/application/create-form.css
+++ b/stylesheets/application/create-form.css
@@ -26,6 +26,7 @@
 /* line 23, ../../sass/application/create-form.scss */
 h1 {
   margin: 0;
+  color: #FFF;
 }
 
 /* Form */
@@ -70,7 +71,7 @@ h1 {
   display: block;
   margin-bottom: 2.5em;
   color: #3b3f45;
-  content: 'Review & Submit';
+  content: 'Check it. Change it. Create it.';
   font-weight: 700;
   font-size: 1.85em;
 }
@@ -215,7 +216,8 @@ button.fs-continue,
 .fs-fields > li label.fs-field-label {
   display: inline-block;
   padding: 0 5px 1em 0;
-  font-weight: 700;
+  font-weight: 600;
+  font-size: 18px;
   pointer-events: none;
 }
 
@@ -600,7 +602,7 @@ button.fs-continue,
   top: 0;
   width: 0%;
   height: 0.5em;
-  background: #fffed8;
+  background: #CC0A32;
   -webkit-transition: width 0.3s ease-in-out;
   transition: width 0.3s ease-in-out;
 }
@@ -744,7 +746,7 @@ button.fs-continue {
   padding: 0.6em 1.5em;
   border: 1px solid rgba(0, 0, 0, 0.4);
   border-radius: 40px;
-  font-weight: 700;
+  font-weight: 600;
   color: rgba(0, 0, 0, 0.4);
 }
 
