--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -11,6 +11,7 @@
 @import "global/base";
 @import "global/navbar";
 @import "global/navfooter";
+@import "global/showpage";
 
 //MARKETING STYLES
 @import "marketing/homepage";
