--- a/sass/global/_following.scss
+++ b/sass/global/_following.scss
@@ -1,4 +1,4 @@
-.show-page {
+.following-page {
 
 	.main-nav-header {
 		padding-top: 0 !important;
@@ -17,31 +17,35 @@
 
 		}
 
-	.showpage-image {
+	.user-image {
 		img{
 			float: right;
+			margin-bottom: 2em;
 		}
 	}
 
-	.about-fundraiser {
-		float: left;
+	.following-fundraisers {
 
-		h3 {
-			color: $base-blue;
-
+		h5 {
+			color: $light-blue;
 		}
-	}
-
-	.stats-fundraiser {
-		float: right;
-		h3, h4 {
+		a {
 			color: $base-blue;
 		}
-	}
 
-	.supporters {
-		h3 {
-			color: $base-blue;
+		.divider {
+			padding-top: 0.5em;
+			padding-bottom: 1em;
+
+		}
+
+		.second-fundraiser {
+			img {
+				padding-top: 1em;
+			}
 		}
 	}
+
+	
+	
 }
