sassed sign up page

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -22,3 +22,4 @@
 @import "application/showpage";
 @import "application/following";
 @import "application/frmanage";
+@import "application/editprofile";
