--- a/sass/global/_buttons.scss
+++ b/sass/global/_buttons.scss
@@ -54,7 +54,13 @@
 	.button-nav{ padding:12px 18px !important; margin:1em;  }
 	.button-large{ font-size: 18px; margin:1em; padding:15px 40px !important; }
 	.button-long{ width:100%; }
-	.button-box{width: 100%}
+	.button-box{width: 75%}
+	.button-fb {
+		border: solid .1rem #3b5998;
+		background: #3b5998;
+		-webkit-font-smoothing: antialiased;
+		color: #fff;
+		text-shadow: -0.1rem -0.1rem rgba(0,0,0,0.1);}
 
 
 	//BUTTON POSITION
@@ -62,3 +68,5 @@
 	.button-center{ text-align:center; }
 	.button-left{ text-align:left; }
 	.button-right{ text-align:right; }  
+
+	
