--- a/sass/global/_navbar.scss
+++ b/sass/global/_navbar.scss
@@ -1,7 +1,9 @@
 .main-nav-header {
   padding: 10px 0 0 0;
   margin-bottom: 0;
-    
+  
+
+
   .left-nav {
     float: left;
     margin-bottom: 0;
@@ -18,6 +20,7 @@
       a{
         color: $base-red;
         text-decoration: none; 
+        font-family: $main-typeface;
       }
        
   }
@@ -33,6 +36,7 @@
       a {
         color: $base-red;
         text-decoration: none;
+        font-family: $main-typeface;
       }
     
     }
